# tiktok-collection-dl

./: .gitignore  README.md  download_collection.bat  list.txt.example  pyproject.toml  tiktok_collection_dl_config.yaml  tiktok_collection_dl_config.yaml.example  tiktok_download_collection.bat
tiktok_collection_dl/: cli.py  config.py  downloader.py
