[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-collection-dl"
version = "0.1.0"
description = "Download TikTok collections as best-quality audio via yt-dlp"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
tiktok-collection-dl = "tiktok_collection_dl.cli:main"
